[project]
name = "pharaohs-pyramid"
version = "0.1.0"
description = "Egyptian themed Tetris game with power-ups and AI hints"
authors = [
    {name = "Pharaoh Hurt",email = "phurdev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
flake8-annotations = "^3.1.1"
flake8-docstrings = "^1.7.0"
mypy = "^1.17.0"
pre-commit = "^4.2.0"

